--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server",
-    "build": "babel src/app.js --out-file=scripts/app.js --presets=env,react --watch"
+    "build":"webpack",
+    "build-babel": "babel src/app.js --out-file=scripts/app.js --presets=env,react --watch"
   },
   "devDependencies": {
     "babel-preset-env": "^1.7.0",
